# cas-dl-compvis-lectures-hs2025

./: .dockerignore  .gitignore  .nojekyll  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  NOTES.md  QUARTO.md  README.md  TODO.md  _environment  _metadata.yml  _quarto.yml  _variables.yml  index.html  index.qmd  logo.css  postBuild  pyproject.toml  requirements-ci.txt  robots.txt  search.json  sitemap.xml  styles.css
.devcontainer/: .gitignore  Dockerfile  MIGRATION.md  Makefile  QUICKREF.md  README.md  SETUP_COMPLETE.md  devcontainer.json  post-create.sh  post-start.sh
.github/workflows/: publish.yml
assets/: _macros.tex  references.bib
assets/images/cnns/: cow_image.txt
lectures/: classification.html  classification.qmd  cnns.html  cnns.qmd  foundation_models.qmd  frameworks.html  frameworks.qmd  intro.html  intro.qmd  neural_networks.html  neural_networks.qmd  practical.html  recent_advances.html  recent_advances.qmd  representation_learning.qmd
pages/: about.html  demos.html  exercises.html  exercises.qmd  links.html  literature.html  literature.qmd  notation.html  quiz.html  quiz.qmd
pages/background/: frameworks.html  frameworks.qmd  machine_learning.html  machine_learning.qmd  neural_networks.html  neural_networks.qmd
pages/genai/: basics.qmd  gans.qmd  intro.qmd  models.qmd
pages/lectures/: classification.html  classification.qmd  cnns.html  cnns.qmd  generative_models.html  generative_models.qmd  intro.html  intro.qmd  intro_genai.html  intro_genai.qmd  practical.html  practical.qmd  recent_advances.html  recent_advances.qmd  representation_learning.html  representation_learning.qmd
pages/misc/: about.html  demos.html  demos.qmd  exercises.html  exercises.qmd  links.html  links.qmd  literature.html  literature.qmd  notation.html  notation.qmd  quiz.html  quiz.qmd  student_projects.html  student_projects.qmd
pages/slides/: _metadata.yaml  cnns.html  cnns.qmd  foundation_models.html  foundation_models.qmd  generative_models.html  generative_models.qmd  image_classification.html  image_classification.qmd  intro.html  intro.qmd  intro_genai.html  intro_genai.qmd  practical.html  recent_advances.html  representation_learning.html  representation_learning.qmd
site_libs/bootstrap/: bootstrap-159896a7fbbc1299bfd73fe3af9cd852.min.css  bootstrap-7365f4c1a6be05280eba792c58017f0b.min.css  bootstrap-86bf2303baaa0b5c24e278f86173e5f9.min.css  bootstrap-e0449c57dc659bcd97f89e2c92d66f0b.min.css
slides/: _metadata.yaml  cnns.html  cnns.qmd  foundation_models.html  image_classification.html  intro.html  intro.qmd  practical.html  practical.qmd  q-slides-theme.scss  recent_advances.html  recent_advances.qmd
