
[tool.poetry]
name = "cas-dl-cv"
version = "0.1.0"
description = "CAS Deep Learning - Computer Vision HS2025"
authors = ["Marco Willi <marco.willi@fhnw.ch>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"

# core
numpy = "*"
scikit-learn = "*"
matplotlib = "*"
seaborn = "*"
pillow = "*"
tabulate = "*"
python-dotenv = "*"
ipywidgets = ">=8"
ipykernel = "^6.30.1"
jupyter = "*"
jupyterlab = "*"
jupyter-cache = "*"

# CV/ML core
scikit-image = "*"
timm = "*"

torch = { version = "2.8.0+cpu", source = "pytorch-cpu" }
torchvision = { version = "0.23+cpu", source = "pytorch-cpu" }

torchmetrics = "*"
lightning = "*"
transformers = "*"
opencv-python-headless = "*"
mlxtend = "*"
kornia = "*"

# --- generative ai--- #
openai = "^2.1.0"
replicate = "^1.0.7"

# --- experiment tracking --- #
tensorboard = "*"

# visualization extras
plotly = "*"
altair = "*"

# handy tools
gdown = "*"
torchshow = "*"
torchviz = "*"
torchinfo = "*"
visualtorch = "*"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "*"
ruff = "*"
pre-commit = "*"
jupyter-black = "*"
python-dotenv = "*"

# Heavy/optional groups
[tool.poetry.group.ray]
optional = true

[tool.poetry.group.ray.dependencies]
ray = { version = "*", extras = ["tune"] }

[tool.poetry.group.nbgrader]
optional = true

[tool.poetry.group.nbgrader.dependencies]
nbgrader = "*"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"
